@@ -729,10 +729,15 @@ These packages are currently installed on your computer.
 	</para>
 
 	<para>
-	  As the top line of the screen suggests, you can access
-	  &aptitude;'s menus by pressing <keycombo action='simul'><keycap>Control</keycap><keycap>t</keycap></keycombo>; you can
-	  also click the mouse on a menu title if your system supports
-	  it.  Pressing <keycombo action='simul'><keycap>Control</keycap><keycap>t</keycap></keycombo> will open the Actions menu:
+	  As the top line of the screen suggests, you can access &aptitude;'s
+	  menus by pressing <keycombo
+	  action='simul'><keycap>Control</keycap><keycap>t</keycap></keycombo>
+	  (also valid: <keycombo
+	  action='simul'><keycap>Control</keycap><keycap>Space</keycap></keycombo>
+	  and <keycap>F10</keycap>); you can also click the mouse on a menu
+	  title if your system supports it.  Pressing <keycombo
+	  action='simul'><keycap>Control</keycap><keycap>t</keycap></keycombo>
+	  will open the Actions menu:
 	</para>
 
 	<screenshot>
@@ -2139,11 +2144,13 @@ Abort.</screen>
 	<title>Using the menus</title>
 
 	<para>
-	  The menu bar at the top of the screen lists the most
-	  important commands in &aptitude;.  To activate the menu bar,
-	  press <keycombo><keycap>Control</keycap><keycap>t</keycap></keycombo>; you can then navigate it using
-	  the arrow keys and select a menu item using
-	  <keycap>Enter</keycap>.
+	  The menu bar at the top of the screen lists the most important
+	  commands in &aptitude;.  To activate the menu bar, press
+	  <keycombo><keycap>Control</keycap><keycap>t</keycap></keycombo> (also
+	  valid: <keycombo
+	  action='simul'><keycap>Control</keycap><keycap>Space</keycap></keycombo>
+	  and <keycap>F10</keycap>); you can then navigate it using the arrow
+	  keys and select a menu item using <keycap>Enter</keycap>.
 	</para>
 
 	<para>
