@@ -124,6 +124,13 @@ Version 0.7.5 UNRELEASED
     * Separate two elements in --add-user-tag-to description with comma, they
       were displayed together
 
+  * Guide/User's Manual:
+
+    * Add keybindings for menu bar (Closes: #365298)
+
+      Add an indication in the document that "Control+[space]" and "F10" are
+      also valid.
+
 
 [2015-10-16]
 Version 0.7.4
